# zlib-minimal

./: CMakeLists.txt  README.md  crc32.c  zpipe.c  zpipe.h
